--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libimagequant"]
 	path = libimagequant
 	url = https://github.com/ImageOptim/libimagequant
+[submodule "dovi_tool"]
+	path = dovi_tool
+	url = https://github.com/quietvoid/dovi_tool
